Fix: SCSS variable scope issue - define layout variables before imports
- Move layout variables to top of main.scss
- Create separate _layout-variables.scss file
- Import layout variables in _single.scss and _blog-post.scss
- Add !default flag to prevent redefinition conflicts

--- a/_sass/layout/_blog-post.scss
+++ b/_sass/layout/_blog-post.scss
@@ -2,6 +2,8 @@
    BLOG POST SPECIFIC STYLES
    ========================================================================== */
 
+@import "layout-variables";
+
 /* Blog post pages - override single layout */
 .layout--single {
   /* Fix main container width */
