--- a/_sass/layout/_single.scss
+++ b/_sass/layout/_single.scss
@@ -2,6 +2,8 @@
    SINGLE POST/PAGE LAYOUT
    ========================================================================== */
 
+@import "layout-variables";
+
 /* Single page/post specific styles */
 .layout--single {
   #main {
