--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,12 @@
    sorted by the dependencies. Also, the first two lines of the file are required by Jekyll.
  */
 
+/* Layout configuration variables - Define before imports */
+$sidebar-width: 300px !default;
+$container-max-width: 1400px !default;
+$content-padding: 40px !default;
+$content-max-width: calc(100% - #{$sidebar-width} - 80px) !default;
+
 @import
     "vendor/breakpoint/breakpoint",
 
@@ -45,12 +51,6 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
 ;
-
-/* Layout configuration variables */
-$sidebar-width: 300px;
-$container-max-width: 1400px;
-$content-padding: 40px;
-$content-max-width: calc(100% - #{$sidebar-width} - 80px);
 
 /* Base document styles */
 html {
