--- a/_sass/layout/_blog-post.scss
+++ b/_sass/layout/_blog-post.scss
@@ -64,6 +64,8 @@
     background: var(--global-bg-color);
     border: 1px solid var(--global-border-color);
     border-radius: 8px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
     
     @include breakpoint($medium) {
       padding: 2rem;
@@ -85,6 +87,7 @@
     max-width: 100%;
     overflow-wrap: break-word;
     word-wrap: break-word;
+    width: 100%;
     
     /* Post header */
     header {
@@ -128,9 +131,11 @@
   /* Post content */
   .page__content {
     max-width: 100%;
+    width: 100%;
     font-size: 1rem;
     line-height: 1.75;
     color: var(--global-text-color);
+    overflow-x: hidden;
     
     @include breakpoint($large) {
       font-size: 1.0625rem;
