--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -25,8 +25,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 2em 0 0.5em;
-  line-height: 1.2;
+  margin: 2.5em 0 0.75em; // Increased margins
+  line-height: 1.3; // Slightly increased line height
   font-family: $header-font-family;
   font-weight: bold;
 }
@@ -61,7 +61,8 @@ small, .small {
 }
 
 p {
-  margin-bottom: 1.3em;
+  margin-bottom: 1.5em; // Increased paragraph spacing
+  line-height: 1.7; // Better readability
 }
 
 u,
@@ -96,8 +97,8 @@ abbr[data-original-title] {
 /* blockquotes */
 
 blockquote {
-  margin: 2em 1em 2em 0;
-  padding-left: 1em;
+  margin: 2.5em 1em 2.5em 0; // Increased margins
+  padding-left: 1.25em; // Increased padding
   padding-right: 1em;
   font-style: italic;
   border-left: 0.25em solid var(--global-border-color);
