--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -32,9 +32,9 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1em;
+    margin-top: 2em; // Increased top margin
     max-width: 100%;
-    padding: 0 1em 1em;
+    padding: 1em 1.5em 1.5em; // Increased padding
 
     @include breakpoint($x-large) {
       max-width: $x-large;
