--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -28,20 +28,27 @@
 }
 
 .archive__subtitle {
-  margin: 1.414em 0 0;
-  padding-bottom: 0.5em;
-  font-size: $type-size-5;
+  margin: 3em 0 1.5em; // Increased top margin for year headers
+  padding-bottom: 0.75em;
+  font-size: $type-size-4; // Slightly larger font
+  font-weight: 600;
   color: var(--global-text-color-light);
-  border-bottom: 1px solid var(--global-border-color);
+  border-bottom: 2px solid var(--global-border-color); // Thicker border
+
+  // First year subtitle should have less top margin
+  &:first-child {
+    margin-top: 1.5em;
+  }
 
   + .list__item .archive__item-title {
-    margin-top: 0.5em;
+    margin-top: 1em; // More space after year header
   }
 }
 
 .archive__item-title {
-  margin-bottom: 0.25em;
+  margin-bottom: 0.5em; // Increased bottom margin
   font-family: $sans-serif-narrow;
+  line-height: 1.4; // Better line height
 
   a + a {
     opacity: 0.5;
@@ -90,6 +97,14 @@
    ========================================================================== */
 
 .list__item {
+  margin-bottom: 2em; // Add spacing between posts
+  padding-bottom: 1.5em; // Add padding at bottom
+  
+  // Add subtle separator between posts
+  &:not(:last-child) {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
   @include breakpoint($medium) {
     padding-right: $right-sidebar-width-narrow;
   }
@@ -103,7 +118,7 @@
   }
 
   .page__meta {
-    margin: 0 0 4px;
+    margin: 0 0 0.5em; // Increased margin
   }
 }
 
