--- a/_sass/layout/_clean-single.scss
+++ b/_sass/layout/_clean-single.scss
@@ -504,6 +504,7 @@ body {
   --sidebar-bg: white;
   --border-color: #dee2e6;
   --text-color: #212529;
+  --text-color-light: #6c757d;
   --heading-color: #212529;
   --link-color: #667eea;
   --link-hover-color: #5a67d8;
@@ -519,6 +520,7 @@ body {
   --sidebar-bg: #2d2d2d;
   --border-color: #404040;
   --text-color: #e0e0e0;
+  --text-color-light: #a0a0a0;
   --heading-color: #ffffff;
   --link-color: #8b9dc3;
   --link-hover-color: #a8b8d8;
