Fix: Year-Archive 페이지 연도별 간격 극대화
- 연도 헤더 상단 마진: 5em으로 대폭 증가
- 연도 헤더와 첫 포스트 사이: 2.5em 패딩 추가
- 연도 헤더 폰트 크기: 2rem으로 확대
- year-archive-post wrapper 클래스 추가
- 각 포스트를 wrapper로 감싸서 독립적 간격 제어
- 포스트간 구분선 추가 (1px border-bottom)
- 연도별 그룹핑으로 시각적 구분 강화

--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -40,8 +40,18 @@
     margin-top: 1.5em;
   }
 
-  + .list__item .archive__item-title {
-    margin-top: 1em; // More space after year header
+  // First post after year header needs extra spacing
+  + .list__item {
+    margin-top: 2em; // Much more space after year header
+    
+    .archive__item-title {
+      margin-top: 0; // Reset the title margin
+    }
+  }
+  
+  // Subsequent items
+  + .list__item + .list__item {
+    margin-top: 0; // Normal spacing for other items
   }
 }
 
