--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -110,8 +110,8 @@
   margin-bottom: 2em; // Add spacing between posts
   padding-bottom: 1.5em; // Add padding at bottom
   
-  // Add subtle separator between posts
-  &:not(:last-child) {
+  // Add subtle separator between posts (except for year-archive)
+  .archive:not(#year-archive) &:not(:last-child) {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
   
