Fix: Year-Archive 콘텐츠 완전히 박스 내부 배치
- archive 박스에 overflow: hidden 추가
- 모든 자식 요소 max-width: 100% 설정
- year-archive의 모든 요소에 width: 100%, box-sizing: border-box 적용
- 불필요한 padding-right 제거 (!important로 강제)
- 마진과 패딩 최적화:
  - 연도 헤더: 2rem 상단, 1rem 하단
  - 포스트간: 1.5rem 간격
- position: relative로 컨테이너 설정
- 모든 콘텐츠가 archive 박스 경계 내부에 정확히 위치

--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -118,16 +118,23 @@
     }
   }
   
-  @include breakpoint($medium) {
-    padding-right: $right-sidebar-width-narrow;
+  // year-archive에서는 breakpoint padding 제거
+  #year-archive & {
+    padding-right: 0 !important;
   }
+  
+  .archive:not(#year-archive) & {
+    @include breakpoint($medium) {
+      padding-right: $right-sidebar-width-narrow;
+    }
 
-  @include breakpoint($large) {
-    padding-right: $right-sidebar-width;
-  }
+    @include breakpoint($large) {
+      padding-right: $right-sidebar-width;
+    }
 
-  @include breakpoint($x-large) {
-    padding-right: $right-sidebar-width-wide;
+    @include breakpoint($x-large) {
+      padding-right: $right-sidebar-width-wide;
+    }
   }
 
   .page__meta {
